import "google/protobuf/empty.proto";

import "review-events.proto";
import "../common/common.proto";

syntax = "proto3";

package review;

message Create {
  string userId = 1;
  string ideaId = 2;
}
message Created {
  string id = 1;
}

message EditContent {
  string id = 1;
  string userId = 2;
  string content = 3;
}

message ChangeScore {
  string id = 1;
  string userId = 2;
  ReviewScore score = 3;
}

message Publish {
  string id = 1;
  string userId = 2;
}

message GetEventsByUserId {
  string userId = 1;
}

service ReviewCommands {
  rpc create(Create) returns (Created);
  rpc editContent(EditContent) returns (google.protobuf.Empty);
  rpc changeScore(ChangeScore) returns (google.protobuf.Empty);
  rpc publish(Publish) returns (google.protobuf.Empty);
  rpc getEventsByUserId(GetEventsByUserId) returns (ReviewEvents);

  rpc getEvents(GetEvents) returns (ReviewEvents);
}