import "google/protobuf/empty.proto";
import "review-events.proto";

syntax = "proto3";

package review;

service ReviewRead {
  rpc getByIdeaId(GetByIdeaId) returns (Reviews);
  rpc getByAuthorAndIdea(GetByAuthorAndIdea) returns (Review);
  rpc getByAuthor(GetByAuthor) returns (Reviews);
  rpc getAll(google.protobuf.Empty) returns (Reviews);
}

message GetByIdeaId {
  string ideaId = 1;
  optional string auid = 2;
}

message GetByAuthor {
  string authorId = 1;
  optional string auid = 2;
}

message GetByAuthorAndIdea {
  string ideaId = 1;
  string authorId = 2;
  optional string auid = 3;
}

message Review {
  string id = 1;
  string authorUserId = 2;
  string receiverUserId = 3;
  string ideaId = 4;
  string content = 5;
  ReviewScore score = 6;
  string publishedAt = 7;
  string updatedAt = 8;
  int32 lastEventVersion = 9;
}

message Reviews {
  repeated Review reviews = 1;
}
